# advent_of_code_2022

./: Cargo.toml  Readme.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
data/: day1.md  day2.md  day3.md  day4.md  day5.md  day6.md  day7.md  day8.md
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  utils.rs
src/utils/: aoc.rs  point.rs  shortest_path.rs  vec2d.rs
