[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
color-eyre = { version = "0.6", default-features = false }
eyre = "0.6"
itertools = "0.10"
nom = "7"
range_ranger = "0.1.1"
thiserror = "1.0"
