[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yansi = "0.5"
color-eyre = { version = "0.6", default-features = false }
eyre = "0.6"
itertools = "0.10"
nom = "7"
range_ranger = "0.1.1"
thiserror = "1.0"
rayon = "1.6.1"
scarlet = "1.1.0"
pretty_assertions = "1.3.0"
clap = { version = "4.0.29", features = ["derive"] }
once_cell = "1.16.0"
